# cmake_leanning

./: CMakeLists.txt  readme.txt
include_test/: igl.h
libs_test/: CMakeLists.txt  test.c
src_test/: CMakeLists.txt  a.out  gdb_test.c
